--- a/index.html
+++ b/index.html
@@ -242,18 +242,15 @@
 
 <link href='https://fonts.googleapis.com/css?family=Josefin+Sans:100,300' rel='stylesheet' type='text/css'>
 <div class="cover super-centered-container">
-  <canvas id="can">Get a browser</canvas>
-  <div class="overlay-static">    
+    <canvas id="can">Get a browser</canvas>
+    <div class="overlay-static">    
     <div class="inline-blocks">
-      <h2 class="twenty-one block">2</h2>
-      <img class="image block" src="/media/mai.jpg"><h2 class="twenty-one block"> + 1</h2>
+        <h2 class="twenty-one block">2</h2>
+        <img class="image block" src="https://scontent.fcai17-1.fna.fbcdn.net/v/t39.30808-6/354265160_774065091065525_549621816871361766_n.jpg?_nc_cat=103&ccb=1-7&_nc_sid=1b51e3&_nc_eui2=AeH65cwqvHreA4PliHfcAJy-HZOKtWLPo84dk4q1Ys-jzoFpURIZGWolts5-pag5u_fBkJGTD9p4Wj9zIOQzeiw4&_nc_ohc=Txtrzpaiy-EAX-vd8Hn&_nc_ht=scontent.fcai17-1.fna&oh=00_AfAsObHqBGBuXAsitHu4gkQDdsbmNg-XT_Ntew56IMG7Ew&oe=64F61C30"><h2 class="twenty-one block"> + 1</h2>
     </div>
     <h1 class="bday">Happy Birthday <a href="https://www.facebook.com/mai.tamer.5836/">@Mayoo</a></h1>
-  </div>
+    </div>
 </div>
-<audio controls autoplay hidden>
-    <source src="/media/Albumaty.Com.Amr.Diab.El.Farha.El.Leila.mp3" type="audio/mpeg">
-  Your browser does not support the audio element.
-  </audio>
+
 </body>
 </html>
